[gd_scene load_steps=46 format=2]

[ext_resource path="res://main_scenes/world_chunks/start_location/StartLocation.tscn" type="PackedScene" id=1]
[ext_resource path="res://prefabs/characters/LRRH.tscn" type="PackedScene" id=2]
[ext_resource path="res://main_scenes/world/Blocks.gd" type="Script" id=3]
[ext_resource path="res://main_scenes/world_chunks/forest_a_01/ForestA_01.tscn" type="PackedScene" id=4]
[ext_resource path="res://main_scenes/world_chunks/wolfen_forest/WolfenForest.tscn" type="PackedScene" id=5]
[ext_resource path="res://main_scenes/world_chunks/east_side/EastSide.tscn" type="PackedScene" id=6]
[ext_resource path="res://main_scenes/world_chunks/lakes/Lakes.tscn" type="PackedScene" id=7]
[ext_resource path="res://main_scenes/world_chunks/dark_forest/DarkForest.tscn" type="PackedScene" id=8]
[ext_resource path="res://main_scenes/world_chunks/abbyss_bridge/AbbyssBridge.tscn" type="PackedScene" id=9]
[ext_resource path="res://main_scenes/world_chunks/grandmas_house/GrandmasHouse.tscn" type="PackedScene" id=10]
[ext_resource path="res://main_scenes/world_chunks/duck_lake_left/DuckLakeLeft.tscn" type="PackedScene" id=11]
[ext_resource path="res://main_scenes/world_chunks/lake_house/LakeHouse.tscn" type="PackedScene" id=12]
[ext_resource path="res://common_assets/images/white.png" type="Texture" id=13]
[ext_resource path="res://test_scenes/BottomTop_3.tscn" type="PackedScene" id=14]
[ext_resource path="res://test_scenes/Corner_SW.tscn" type="PackedScene" id=15]
[ext_resource path="res://test_scenes/BottomTop_2.tscn" type="PackedScene" id=16]
[ext_resource path="res://test_scenes/BottomTop_1.tscn" type="PackedScene" id=17]
[ext_resource path="res://test_scenes/CornerNE.tscn" type="PackedScene" id=18]
[ext_resource path="res://test_scenes/CornerNW.tscn" type="PackedScene" id=19]
[ext_resource path="res://test_scenes/Side_3.tscn" type="PackedScene" id=20]
[ext_resource path="res://test_scenes/Corner_SE.tscn" type="PackedScene" id=21]
[ext_resource path="res://test_scenes/Side_2.tscn" type="PackedScene" id=22]
[ext_resource path="res://test_scenes/Side_1.tscn" type="PackedScene" id=23]
[ext_resource path="res://test_scenes/Side_4.tscn" type="PackedScene" id=24]
[ext_resource path="res://main_scenes/world_chunks/wolfen_forest2/WolfenForest2.tscn" type="PackedScene" id=25]
[ext_resource path="res://main_scenes/world_chunks/top_forest1/TopForest_01.tscn" type="PackedScene" id=26]
[ext_resource path="res://main_scenes/world_chunks/top_forest2/TopForest_02.tscn" type="PackedScene" id=27]
[ext_resource path="res://main_scenes/world_chunks/wolf_forest3/WolfForest3.tscn" type="PackedScene" id=28]
[ext_resource path="res://main_scenes/world/Grimdark.gd" type="Script" id=29]
[ext_resource path="res://main_scenes/world/GameObjects.gd" type="Script" id=30]
[ext_resource path="res://prefabs/quest_utils/PhrasePlayer.tscn" type="PackedScene" id=31]
[ext_resource path="res://main_scenes/world/HUD.gd" type="Script" id=32]
[ext_resource path="res://main_scenes/world_chunks/wolfen_forest/WolfPlotController.gd" type="Script" id=33]
[ext_resource path="res://prefabs/quest_utils/TextSign.tscn" type="PackedScene" id=34]
[ext_resource path="res://prefabs/characters/Wolf.tscn" type="PackedScene" id=35]
[ext_resource path="res://prefabs/trees/TreeLeaf.tscn" type="PackedScene" id=37]
[ext_resource path="res://prefabs/trees/TreePine.tscn" type="PackedScene" id=38]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float brightness = 0.8;
uniform float contrast = 1.5;
uniform float saturation = 1.8;

void fragment() {
	vec3 c = textureLod(SCREEN_TEXTURE, SCREEN_UV, 0.0).rgb;

	c.rgb = mix(vec3(0.0), c.rgb, brightness);
	c.rgb = mix(vec3(0.5), c.rgb, contrast);
	c.rgb = mix(vec3(dot(vec3(1.0), c.rgb) * 0.33333), c.rgb, saturation);

	COLOR.rgb = c;
}

"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/brightness = 1.0
shader_param/contrast = 1.0
shader_param/saturation = 1.1

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.027451, 0.784314, 0.466667, 0.243137 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.47451, 0.894118, 0.0117647, 0.352941 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.109804, 0.729412, 1, 0.286275 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://resources/dpcomic.ttf"

[sub_resource type="DynamicFont" id=8]
size = 12
font_data = SubResource( 7 )

[node name="World" type="YSort"]

[node name="Blocks" type="YSort" parent="."]
script = ExtResource( 3 )
columns = 1
height = 608

[node name="StartLocation" parent="Blocks" instance=ExtResource( 1 )]
position = Vector2( -1024, 608 )

[node name="TileBlock" parent="Blocks" instance=ExtResource( 4 )]
position = Vector2( -1024, 0 )

[node name="TileBlock2" parent="Blocks" instance=ExtResource( 5 )]
position = Vector2( -1024, -608 )

[node name="TileBlock3" parent="Blocks" instance=ExtResource( 6 )]
position = Vector2( 1024, 0 )

[node name="TileBlock4" parent="Blocks" instance=ExtResource( 7 )]
position = Vector2( 0, 608 )

[node name="TileBlock5" parent="Blocks" instance=ExtResource( 8 )]
position = Vector2( 0, -1216 )

[node name="TileBlock6" parent="Blocks" instance=ExtResource( 10 )]
position = Vector2( 0, -608 )

[node name="TileBlock7" parent="Blocks" instance=ExtResource( 9 )]
position = Vector2( 1024, -608 )

[node name="TileBlock8" parent="Blocks" instance=ExtResource( 11 )]

[node name="TileBlock10" parent="Blocks" instance=ExtResource( 18 )]
position = Vector2( 2048, -1824 )

[node name="TileBlock11" parent="Blocks" instance=ExtResource( 19 )]
position = Vector2( -2048, -1824 )

[node name="TileBlock12" parent="Blocks" instance=ExtResource( 21 )]
position = Vector2( 2048, 1216 )

[node name="TileBlock13" parent="Blocks" instance=ExtResource( 15 )]
position = Vector2( -2048, 1216 )

[node name="TileBlock14" parent="Blocks" instance=ExtResource( 23 )]
position = Vector2( -2048, 608 )

[node name="TileBlock15" parent="Blocks" instance=ExtResource( 22 )]
position = Vector2( -2048, 0 )

[node name="TileBlock16" parent="Blocks" instance=ExtResource( 20 )]
position = Vector2( -2048, -608 )

[node name="TileBlock17" parent="Blocks" instance=ExtResource( 23 )]
position = Vector2( -2048, -1216 )

[node name="TileBlock18" parent="Blocks" instance=ExtResource( 26 )]
position = Vector2( -1024, -1824 )

[node name="TileBlock20" parent="Blocks" instance=ExtResource( 17 )]
position = Vector2( 1024, -1824 )

[node name="TileBlock21" parent="Blocks" instance=ExtResource( 17 )]
position = Vector2( -1024, 1216 )

[node name="TileBlock22" parent="Blocks" instance=ExtResource( 16 )]
position = Vector2( 0, 1216 )

[node name="TileBlock23" parent="Blocks" instance=ExtResource( 14 )]
position = Vector2( 1024, 1216 )

[node name="TileBlock24" parent="Blocks" instance=ExtResource( 24 )]
position = Vector2( 2048, 608 )

[node name="TileBlock25" parent="Blocks" instance=ExtResource( 22 )]
position = Vector2( 2048, 0 )

[node name="TileBlock26" parent="Blocks" instance=ExtResource( 20 )]
position = Vector2( 2048, -608 )

[node name="TileBlock27" parent="Blocks" instance=ExtResource( 23 )]
position = Vector2( 2048, -1216 )

[node name="TileBlock9" parent="Blocks" instance=ExtResource( 12 )]
position = Vector2( 1024, 608 )

[node name="TileBlock28" parent="Blocks" instance=ExtResource( 25 )]
position = Vector2( -1024, -1216 )

[node name="TileBlock19" parent="Blocks" instance=ExtResource( 27 )]
position = Vector2( 0, -1824 )

[node name="TileBlock29" parent="Blocks" instance=ExtResource( 28 )]
position = Vector2( 1024, -1216 )

[node name="GameObjects" type="YSort" parent="."]
script = ExtResource( 30 )

[node name="Character" parent="GameObjects" instance=ExtResource( 2 )]
position = Vector2( -772.692, 1099.84 )
MOTION_SPEED = 8500

[node name="Camera2D" type="Camera2D" parent="GameObjects/Character"]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
drag_margin_left = 0.08
drag_margin_top = 0.08
drag_margin_right = 0.08
drag_margin_bottom = 0.08

[node name="PhrasePlayer" parent="GameObjects/Character" instance=ExtResource( 31 )]
position = Vector2( -91.179, -68.2974 )

[node name="Wolf" parent="GameObjects" instance=ExtResource( 35 )]
position = Vector2( -461.186, -349.704 )
MOTION_SPEED = 0
can_attack = false
char_control = 3

[node name="WolfPlotController" type="Node2D" parent="GameObjects/Wolf"]
script = ExtResource( 33 )

[node name="PhrasePlayer" parent="GameObjects/Wolf/WolfPlotController" instance=ExtResource( 31 )]
position = Vector2( -57, -69 )

[node name="Area2D" type="Area2D" parent="GameObjects/Wolf/WolfPlotController"]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameObjects/Wolf/WolfPlotController/Area2D"]
shape = SubResource( 1 )

[node name="UnboundTimer" type="Timer" parent="GameObjects/Wolf/WolfPlotController"]
wait_time = 6.0

[node name="TextSign" parent="GameObjects/Wolf/WolfPlotController" instance=ExtResource( 34 )]
position = Vector2( -13.5, -44 )
phrase_enter = "Hrrrrr!"
is_active = true
one_shot = true
radius = 140

[node name="TreePine" parent="GameObjects" instance=ExtResource( 38 )]
position = Vector2( -1131.52, 1623.48 )

[node name="TreePine2" parent="GameObjects" instance=ExtResource( 38 )]
position = Vector2( -1407.52, 1441.48 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grimdark" type="TextureRect" parent="CanvasLayer/Control"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
expand = true
script = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/Control/Grimdark"]

[node name="HUD" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HUD"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Control" type="Control" parent="CanvasLayer/HUD/HBoxContainer"]
margin_right = 435.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="Control2" type="Control" parent="CanvasLayer/HUD/HBoxContainer"]
margin_left = 439.0
margin_right = 874.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HUD/HBoxContainer"]
margin_left = 878.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="CanvasLayer/HUD/HBoxContainer/VBoxContainer"]
margin_right = 146.0
margin_bottom = 12.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 8 )
text = "Exit"
flat = true

[node name="Endgame" type="MarginContainer" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreeLeaf" parent="." instance=ExtResource( 37 )]
position = Vector2( -1097.6, 1292.83 )

[node name="TreeLeaf2" parent="." instance=ExtResource( 37 )]
position = Vector2( 2371.87, 1373.04 )

[node name="TreeLeaf3" parent="." instance=ExtResource( 37 )]
position = Vector2( 2433.16, 916.816 )

[node name="TreeLeaf" parent="TreeLeaf3" instance=ExtResource( 37 )]
position = Vector2( -292.799, -170.232 )

[node name="TreeLeaf2" parent="TreeLeaf3" instance=ExtResource( 37 )]
position = Vector2( -551.551, 354.082 )

[node name="TreePine" parent="TreeLeaf3" instance=ExtResource( 38 )]
position = Vector2( -4037.9, 313.226 )

[node name="TreePine2" parent="TreeLeaf3" instance=ExtResource( 38 )]
position = Vector2( -4187.7, 531.123 )

[node name="TreePine3" parent="TreeLeaf3" instance=ExtResource( 38 )]
position = Vector2( -4031.09, 660.499 )

[node name="TreePine4" parent="TreeLeaf3" instance=ExtResource( 38 )]
position = Vector2( -4051.52, -204.278 )

[node name="TreeLeaf4" parent="." instance=ExtResource( 37 )]
position = Vector2( 2249.31, 923.625 )

[node name="TreeLeaf5" parent="." instance=ExtResource( 37 )]
position = Vector2( 2269.74, 644.445 )

[node name="TreeLeaf6" parent="." instance=ExtResource( 37 )]
position = Vector2( 1670.52, 1338.99 )

[node name="TreeLeaf7" parent="." instance=ExtResource( 37 )]
position = Vector2( 1500.29, 1447.94 )

[node name="TreeLeaf8" parent="." instance=ExtResource( 37 )]
position = Vector2( 608.274, 1359.42 )

[node name="TreeLeaf9" parent="." instance=ExtResource( 37 )]
position = Vector2( 220.146, 1352.61 )

[node name="TreeLeaf10" parent="." instance=ExtResource( 37 )]
position = Vector2( -345.024, 1379.85 )

[node name="TreeLeaf11" parent="." instance=ExtResource( 37 )]
position = Vector2( -617.395, 1264.09 )

[node name="TreeLeaf12" parent="." instance=ExtResource( 37 )]
position = Vector2( -1134.9, 501.45 )

[node name="TreeLeaf13" parent="." instance=ExtResource( 37 )]
position = Vector2( -1141.71, 215.461 )

[node name="TreeLeaf14" parent="." instance=ExtResource( 37 )]
position = Vector2( 2977.9, 1550.08 )

[node name="TreeLeaf15" parent="." instance=ExtResource( 37 )]
position = Vector2( 2903, 923.625 )

[node name="TreeLeaf16" parent="." instance=ExtResource( 37 )]
position = Vector2( 2508.06, 1114.28 )

[node name="TreeLeaf17" parent="." instance=ExtResource( 37 )]
position = Vector2( 2296.97, 1155.14 )

[node name="TreeLeaf18" parent="." instance=ExtResource( 37 )]
position = Vector2( 158.862, 1788.4 )

[node name="TreeLeaf19" parent="." instance=ExtResource( 37 )]
position = Vector2( 499.326, 1720.31 )

[node name="TreeLeaf20" parent="." instance=ExtResource( 37 )]
position = Vector2( 921.5, 1693.07 )

[node name="TreeLeaf21" parent="." instance=ExtResource( 37 )]
position = Vector2( 2031.41, 1631.79 )

[node name="TreePine" parent="." instance=ExtResource( 38 )]
position = Vector2( -1788.59, 1659.03 )

[node name="TreePine2" parent="." instance=ExtResource( 38 )]
position = Vector2( -1774.97, 1270.9 )

[node name="TreePine3" parent="." instance=ExtResource( 38 )]
position = Vector2( -1441.32, 1733.93 )

[node name="TreePine4" parent="." instance=ExtResource( 38 )]
position = Vector2( -1557.07, 1100.67 )

[node name="TreePine5" parent="." instance=ExtResource( 38 )]
position = Vector2( -1577.5, 1373.04 )

[node name="TreePine6" parent="." instance=ExtResource( 38 )]
position = Vector2( -1774.97, 937.243 )

[node name="TreePine7" parent="." instance=ExtResource( 38 )]
position = Vector2( -1713.69, 678.491 )

[node name="TreePine8" parent="." instance=ExtResource( 38 )]
position = Vector2( -1863.49, 17.9919 )

[node name="TreePine9" parent="." instance=ExtResource( 38 )]
position = Vector2( -1666.02, -342.899 )

[node name="TreePine10" parent="." instance=ExtResource( 38 )]
position = Vector2( -1155.33, -553.987 )

[node name="TreePine11" parent="." instance=ExtResource( 38 )]
position = Vector2( -1087.23, -826.357 )

[node name="TreePine12" parent="." instance=ExtResource( 38 )]
position = Vector2( -1128.09, -1337.05 )

[node name="TreePine13" parent="." instance=ExtResource( 38 )]
position = Vector2( -1550.26, -179.477 )

[node name="TreePine14" parent="." instance=ExtResource( 38 )]
position = Vector2( -1911.16, -383.755 )

[node name="TreePine15" parent="." instance=ExtResource( 38 )]
position = Vector2( -1638.79, -601.651 )

[node name="TreePine16" parent="." instance=ExtResource( 38 )]
position = Vector2( -1890.73, -696.981 )

[node name="TreePine17" parent="." instance=ExtResource( 38 )]
position = Vector2( -1679.64, -989.78 )

[node name="TreePine18" parent="." instance=ExtResource( 38 )]
position = Vector2( -1768.16, -792.311 )

[node name="TreePine19" parent="." instance=ExtResource( 38 )]
position = Vector2( -1945.2, -1030.64 )

[node name="TreePine20" parent="." instance=ExtResource( 38 )]
position = Vector2( -1666.02, -1248.53 )

[node name="TreePine21" parent="." instance=ExtResource( 38 )]
position = Vector2( -1829.44, -1255.34 )

[node name="TreePine22" parent="." instance=ExtResource( 38 )]
position = Vector2( -1529.84, -1493.67 )

[node name="TreePine23" parent="." instance=ExtResource( 38 )]
position = Vector2( -1727.31, -1480.05 )

[node name="TreePine24" parent="." instance=ExtResource( 38 )]
position = Vector2( -1917.97, -1704.75 )

[node name="TreeLeaf22" parent="." instance=ExtResource( 37 )]
position = Vector2( 2977.9, 365.265 )

[node name="TreePine25" parent="." instance=ExtResource( 38 )]
position = Vector2( 2228.88, -376.946 )

[node name="TreePine26" parent="." instance=ExtResource( 38 )]
position = Vector2( 2106.31, -492.703 )

[node name="TreePine27" parent="." instance=ExtResource( 38 )]
position = Vector2( 2079.08, -342.899 )

[node name="TreePine28" parent="." instance=ExtResource( 38 )]
position = Vector2( 2188.02, -717.409 )

[node name="TreePine29" parent="." instance=ExtResource( 38 )]
position = Vector2( 2133.55, -1017.02 )

[node name="TreePine30" parent="." instance=ExtResource( 38 )]
position = Vector2( 2262.93, -588.033 )

[node name="TreePine31" parent="." instance=ExtResource( 38 )]
position = Vector2( 2256.12, -186.286 )

[node name="TreePine32" parent="." instance=ExtResource( 38 )]
position = Vector2( 2460.4, -220.333 )

[node name="TreePine33" parent="." instance=ExtResource( 38 )]
position = Vector2( 2474.01, -513.131 )

[node name="TreePine34" parent="." instance=ExtResource( 38 )]
position = Vector2( 2399.11, -792.311 )

[node name="TreePine35" parent="." instance=ExtResource( 38 )]
position = Vector2( 2351.45, -1017.02 )

[node name="TreePine36" parent="." instance=ExtResource( 38 )]
position = Vector2( 2215.26, -921.687 )

[node name="TreePine37" parent="." instance=ExtResource( 38 )]
position = Vector2( 975.974, -1303.01 )

[node name="TreePine38" parent="." instance=ExtResource( 38 )]
position = Vector2( 1193.87, -1323.43 )

[node name="TreeLeaf23" parent="." instance=ExtResource( 37 )]
position = Vector2( 2950.66, 583.161 )

[node name="TreeLeaf24" parent="." instance=ExtResource( 37 )]
position = Vector2( 2426.35, 719.347 )

[connection signal="plot_finished" from="GameObjects/Wolf/WolfPlotController/PhrasePlayer" to="GameObjects/Wolf/WolfPlotController" method="_on_PhrasePlayer_plot_finished"]
[connection signal="area_shape_entered" from="GameObjects/Wolf/WolfPlotController/Area2D" to="GameObjects/Wolf/WolfPlotController" method="_on_Area2D_area_shape_entered"]
[connection signal="timeout" from="GameObjects/Wolf/WolfPlotController/UnboundTimer" to="GameObjects/Wolf/WolfPlotController" method="_on_UnboundTimer_timeout"]
[connection signal="tween_all_completed" from="CanvasLayer/Control/Grimdark/Tween" to="CanvasLayer/Control/Grimdark" method="_on_Tween_tween_all_completed"]
[connection signal="pressed" from="CanvasLayer/HUD/HBoxContainer/VBoxContainer/Button" to="CanvasLayer/HUD" method="_on_Button_pressed"]
